style.css
body {
    font-family: monospace;
    color: #d8dee9;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    background-color: #2e3440;
    background-image: url("graphics/bg.png");
}

h1, h2 {
    font-size: 12px;
    text-align: center;
    border-bottom: 1px solid #4C566A;
    margin: 0;
    padding-bottom: 3px;
    font-style: bold;
    text-transform: uppercase;
    text-wrap: nowrap;
}

h1::before, h2::before { content: "-- "; }
h1::after, h2::after { content: " --"; }

h1 {
    color: #88c0d0;
    border-color: #4C566A;
}

h3 {
    font-size: 12px;
    color: #eceff4;
    font-style: bold;
}

p { font-size: 12px; }

a {
    font-size: 12px;
    text-decoration: none;
    color: #88c0d0;
}

a:hover { text-decoration-line: underline; }

div.window, div.paper {
    text-align: left;
    margin: 10px 3px 10px;
    padding: 0px 5px 3px;
    border-radius: 1px;
    box-shadow: 5px 5px #20242D;
}

div.window {
    position: relative;
    background-color: #3b4252;
    border: 1px solid #4C566A;
}

div.paper {
    margin-left: 10px;
    display: inline-block;
    background-color: #E5DCCA;
    border: 1px solid #99907D;
    color: #3b4252;
}

div.window div.paper, div.window div.window {
    box-shadow: 3px 3px #20242D;
}

div.paper > img {
    background-color: #434c5e;
    border: 1px solid #20242D;
    margin-top: 5px;
    border-radius: 1px;
}

table.main {
    margin: 10px;
    border-spacing: 0;
    vertical-align: top;
}

table.main th {
    width: 128px;
    font-weight: normal;
    vertical-align: top;
}

table.main td {
    width: 512px;
    vertical-align: top;
    padding: 0
}

ul.plain {
    list-style-type: none;
    padding: 0;
}

ul.vnav {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

ul.vnav > :not(:last-child) {
    border-bottom: 1px solid #4C566A;
}

@keyframes splash {
    from { scale: 1.0 }
    to { scale: 1.08 }
}

.splash-text a {
    color: #ebcb8b;
}

.splash-text {
    z-index: 1;
    color: #ebcb8b;
    display: inline-block;
    position: absolute;
    width: 200px;
    text-align: center;
    right: -50px;
    top: 20px;
    rotate: -25deg;
    animation-name: splash;
    animation-duration: 0.4s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    animation-timing-function: ease-in;
}

